# Calibration

./: .gitignore  .gitmodules  INSTALL.md  LICENSE  README.md  package-lock.json  package.json
.config/: lint.cjs
.github/workflows/: ci.yml  release.yml
backend/: pyproject.toml  requirements.txt
backend/app/: bootstrap.py  main.py  models.py  voice.py
backend/app/api/: routes.py
backend/app/calib/: _io.py  chain.py  extrinsics.py  fisheye.py  handeye.py  handeye_pose.py  intrinsics.py  sync.py
backend/app/sources/: manager.py  opencv.py  ros2.py  ros2_context.py
backend/app/sources/poses/: __init__.py  arx.py  manager.py  mock.py  oculus.py  pico.py  steamvr.py
backend/app/utils/: qr_svg.py  yaml_io.py
backend/tests/: test_camera_intrix_yaml.py  test_handeye_append_pose.py  test_handeye_fisheye_pnp.py  test_handeye_load_poses_back_compat.py  test_handeye_pose.py  test_import_mcap.py  test_oculus_process_data.py  test_pico_pose.py  test_pinhole_rectify.py  test_pose_hello.py  test_pose_manager.py  test_recording_import_file.py  test_ros2_source.py  test_ros2_topics_endpoint.py  test_source_manager_dispatch.py  test_sync.py  test_sync_endpoint.py  test_voice_qr_svg.py
docs/: critical-fixes-v2-2026-06-08.md  fisheye-calibration-howto.md  prototype.md
docs/superpowers/plans/: 2026-04-27-pinhole-parity.md  2026-04-27-topbar-telemetry.md  2026-04-28-fisheye-ros2-source.md  2026-04-28-handeye-pose-recording.md  2026-04-28-link-vive-umi.md  2026-05-05-link-tab-unified-sources.md  2026-05-27-pico-pose-source.md
docs/superpowers/specs/: 2026-04-27-pinhole-parity-design.md  2026-04-27-topbar-telemetry-design.md  2026-04-28-fisheye-ros2-source-design.md  2026-04-28-handeye-pose-recording-design.md  2026-04-28-link-vive-umi-design.md  2026-05-05-link-tab-unified-sources-design.md  2026-05-27-pico-pose-source-design.md  2026-06-02-i18n-en-zh-design.md
electron/: main.js  preload.js  sidecar.js
renderer/: index.html  vite.config.js
renderer/src/: App.jsx  main.jsx
renderer/src/api/: client.js
renderer/src/components/: CameraSource.jsx  DetectedFrame.jsx  LiveDetectedFrame.jsx  LivePreview.jsx  RectifiedFrame.jsx  RectifiedLivePreview.jsx  Ros2TopicPicker.jsx  SizeInput.jsx  Tabs.jsx  Topbar.jsx  TweaksPanel.jsx  confirm.jsx  panels.jsx  primitives.jsx  scene3d.jsx  viewport.jsx
renderer/src/i18n/: en.json  index.js  zh.json
renderer/src/lib/: board.js  coverage.js  guidedSequence.js  math3d.js  mock.js  polarCoverage.js  random.js  telemetry.jsx  voice.js  voiceControl.js
renderer/src/styles/: app.css  tokens.css
renderer/src/tabs/: ChainTab.jsx  ExtrinsicsTab.jsx  FisheyeTab.jsx  HandEyeCtrlTab.jsx  HandEyeHMDTab.jsx  HandEyeTab.jsx  IntrinsicsTab.jsx  LinkCalibTab.jsx  _linkSlot.js
scripts/: build_umi_json.py  check-i18n-keys.mjs  dev.sh  precision_report.py
