[project]
name = "calib-backend"
version = "0.2.0"
description = "Calibration Workbench backend — OpenCV + SteamVR + bundle adjustment."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  # numpy<2 强制: ROS2 cv_bridge 与 numpy 2.x 同载会段错误。
  "numpy>=1.26,<2",
  # 非 contrib 即可: 仅用 aruco/charuco, 自 OpenCV 4.7 已并入主仓库 objdetect。
  "opencv-python>=4.10",
  "ruamel.yaml>=0.18",
]

[project.optional-dependencies]
dev = [
  "pyinstaller>=6.11",
  "pytest>=8.3",
  "httpx>=0.27",
  # scipy 仅测试 (test_pico_pose) 用到, 运行时后端不 import, 故归 dev。
  "scipy>=1.13",
  "mcap_protobuf_support>=0.5",
  "foxglove-schemas-protobuf>=0.3",
  "ruff>=0.15",
]
# On Linux with SteamVR installed:
steamvr = ["triad-openvr>=1.0.0"]
# Quest3(s) via OculusReader submodule (third_party/oculus_reader).
# Requires `adb` on the host and the teleop APK installed on the device.
# pure-python-adb only ever publishes pre-releases on PyPI (latest 0.3.0.dev0),
# so the spec must name `.dev0` explicitly — `>=0.3.0` resolves to nothing.
oculus = ["pure-python-adb>=0.3.0.dev0"]
# PICO via XRoboToolkit. xrobotoolkit_sdk is NOT on PyPI — build it from the
# third_party/XRoboToolkit-PC-Service-Pybind submodule (see INSTALL.md) and
# install into this venv. The list is empty because there is no pip-resolvable
# requirement; the comment is the install contract.
pico = []

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["build", "dist", "third_party", ".venv"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "W",    # pycodestyle warnings
  "I",    # isort
  "B",    # flake8-bugbear
  "UP",   # pyupgrade
]
ignore = [
  "E501",  # line too long (handled by formatter; legacy code has long error msgs)
  "B008",  # function call in default arg (FastAPI Depends pattern)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "B011",  # allow assert False in tests
  "E402",  # imports after sys.path tweaking are intentional in tests
  "E701",  # one-line `def foo(): bar` fakes are deliberately terse
  "E702",  # one-line `def __init__(self, x): self._x = x; ...` ditto
]
"app/__init__.py" = ["F401"]
"app/**/__init__.py" = ["F401"]
